fix: updates to owl spacing; director spacing

--- a/assets/sass/vha/pages/necie/news/_index.scss
+++ b/assets/sass/vha/pages/necie/news/_index.scss
@@ -197,3 +197,15 @@
     }
   }
 }
+
+
+
+.news-necie{
+  margin-left: 10px !important;
+}
+
+.owl-item{
+  margin-left: 8px !important;
+  margin-right: 8px !important;
+}
+
